--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
     body {
-      background-color: #e0d5c0;
+      background-color: #d5f2d5;
       max-width: 600px;
       margin: auto;
       text-align: justify;
