--- a/index.html
+++ b/index.html
@@ -22,16 +22,53 @@
       text-align: center;
       color: #b98522;
     }
-
     h2 {
       color: hsl(39, 64%, 29%);
+    }
+
+    /* Horizontal navigation */
+    #main-nav {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 1rem;
+    }
+
+    #main-nav li {
+      display: inline;
+    }
+
+    #main-nav a {
+      text-decoration: underline;
+      color: #000;
+      padding: 6px 10px;
+      border-radius: 4px;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      line-height: 1;
+    }
+
+    #main-nav a:hover {
+      background-color: rgba(0,0,0,0.05);
     }
   </style>
 
 </head>
 
 <body>
-  <h1>竹簡尋源 香港銀雀山漢簡書法藝術展</h1>
+  <h1>竹簡尋源 香港銀雀山漢簡書法藝術展
+    Bamboo Slips Calligraphy - Tracing the Origins of Chinese Calligraphy
+    <br>Hong Kong Yinqueshan Han Bamboo Slips Calligraphy Exhibition
+  </h1>
+
+  <ul id="main-nav">
+    <li><a href="englishintro.html">English</a></li>
+    <li><a href="works.html">Works 作品</a></li>
+  </ul>
   <hr>
 
   <p>「竹簡尋源-香港銀雀山漢簡書法藝術展」是「銀雀山漢簡書法藝術同學會」的首次展覽，展出書法作品包括同學會老師同學的精心傑作, 更有來自十多位香港書法界名家的卓越作品，惠風和暢，熠熠生輝！
@@ -61,7 +98,33 @@
   </p>
   <div><img src="dates.png" alt=""></div>
 
+  
+  
+  <h1>Exhibition Information</h1>
 
+  <h2>Venue:</h2> <p>Exhibition Gallery, 7/F, High Block, Hong Kong City Hall</p>
+  <h2>Dates: </h2>
+    <p>2–4 January 2026 (Friday to Sunday)</p>
+         <h2>Opening Hours:</h2>
+      <p>Friday, 2 January 2026: 3:00 p.m. – 6:00 p.m.
+        <br>Saturday, 3 January 2026: 10:00 a.m. – 7:00 p.m.
+        <br>Sunday, 4 January 2026: 10:00 a.m. – 5:00 p.m.</p>
+      
+
+ <h2>Opening Ceremony:</h2> 
+
+  <p> Friday, 2 January 2026, 4:00 p.m.
+  </p>
+<h2>Guided Tours</h2>
+
+  <p>Saturday, 3 January 2026: 3:00 p.m.
+  <br>Sunday, 4 January 2026: 11:00 a.m.</p>
+
+  <h2>Calligraphy Demonstrations</h2>
+
+  <p> Saturday, 3 January 2026: 11:00 a.m.
+  <br>Sunday, 4 January 2026: 3:00 p.m.
+</p>
 
 
 </body>
