--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
     }
 
     img {
-      width: 80%;
+      width: 50%;
     }
 
     h1 {
@@ -29,8 +29,12 @@
   </style>
 </head>
 <body>
-    <img src="CYT.JPG" alt=""><p>Calligrapher: Chan Yat Tim - Chairman </p>
+    <img src="CYT.JPG" alt=""><p>Calligrapher: Mr.Chan Yan Tim 陳寅添   - Chairman 會長<br>
+ Artwork: "The Art of War" 作品:《孫子兵法》 </div>
+  </p>
     <div></div>
-     <img src="YKW.JPG" alt=""><p>Calligrapher: Yip Kit Wah - Vice Chairman</p>
+     <img src="YKW.JPG" alt=""><p>Calligrapher: Ms. Yip Kit Wah 葉潔華
+  - Vice Chairman - 副會長<br>
+ Artwork: "Five Discourses" 作品:《五議》</p>
 </body>
 </html><div><a href="index.html">Back to Home</a></div>
