--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     img {
-      width: 80%;
+      width: 50%;
     }
 
     h1 {
@@ -67,7 +67,7 @@
 
   <ul id="main-nav">
     <li><a href="englishintro.html">English</a></li>
-    <li><a href="works.html">Works 作品</a></li>
+    <li><a href="works.html">Artworks 作品</a></li>
   </ul>
   <hr>
 
@@ -77,7 +77,8 @@
   <p>展品書體一半為漢簡，其餘還有草書、行書、隸書和榜書等; 作品書寫的內容涵蓋唐詩宋詞、元曲樂府以及聖經金句，亦有以《孫子兵法》、《孫臏兵法》、《五議》等「銀雀山漢簡」核心典籍為題的創作。參觀是次展覽既可暢覽文化經典、又可欣賞漢簡書寫技法、探研文字變化軌跡，確是一次文化及書法藝術的豐盛體驗!
   </p>
 
-  <div><img src="photo01a.JPG" alt=""></div>
+  <div><img src="photo01a.JPG" alt=""><br>Calligrapher: Mr.Chan Ting King 陳定璟老師<br>作品:《蘭亭序》
+ Artwork: "Orchid Pavilion Preface" </div>
   <h2>銀雀山漢簡</h2>
   <p>「銀雀山漢簡」是指1972年在山東銀雀山漢墓出土的數千枚簡牘，其價值極高! 被列為“新中國十大考古發現之一”。 出土簡牘包括中國古代四大兵法《孫子兵法》、《孫臏兵法》、《六韜》和《尉繚子》，以及多部珍貴先秦古籍，為研究先秦漢初的政治、經濟、軍事、文化和書法藝術等提供了重要資料。 特別是失傳1700多年的《孫子兵法》和《孫臏兵法》的同時出土， 解開了歷史上孫子和孫臏是否一人、其兵書是一部還是兩部的千古之謎。</p>
 
@@ -92,7 +93,7 @@
   <p>「銀雀山漢簡書法藝術同學會」在2024年10月成立，以「傳承中華文化，弘揚漢簡書法藝術」為核心宗旨，凝聚海內外漢簡書法愛好者，開展書法研習、作品交流及多元文化活動。我們期盼是次展覽以墨會友，得以迴響！ 未來可與更多喜愛漢簡藝術的書友共聚揮毫，一起領悟漢簡的妙趣風雅。 </p>
 
   <h2>聯絡人</h2>
-  <p>會長陳寅添（WhatsApp 60915272） 副會長葉潔華 （WhatsApp 90362195)</p>
+  <p>會長陳寅添（WhatsApp 60915272）<br> 副會長葉潔華 （WhatsApp 90362195)</p>
 
   <p>展覽資料如下，歡迎各界臨蒞參觀指導！
   </p>
