--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <ul id="main-nav">
     <li><a href="englishintro.html">English</a></li>
     <li><a href="works.html">Artworks 作品</a></li>
+     <li><a href="participantslist.html">Participants 參展者名單</a></li>
   </ul>
   <hr>
 
