--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
   <ul id="main-nav">
     <li><a href="englishintro.html">English</a></li>
-    <li><a href="works.html">Artworks 作品</a></li>
-     <li><a href="participantslist.html">Participants 參展者名單</a></li>
+    <li><a href="works.html">Artworks <br> 作品</a></li>
+     <li><a href="participantslist.html">Participants <br> 參展者名單</a></li>
   </ul>
   <hr>
 
