--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       background-color: #d5f2d5;
 
-    
+
       max-width: 600px;
       margin: auto;
       text-align: justify;
@@ -24,6 +24,7 @@
       text-align: center;
       color: #b98522;
     }
+
     h2 {
       color: hsl(39, 64%, 29%);
     }
@@ -55,8 +56,17 @@
     }
 
     #main-nav a:hover {
-      background-color: rgba(0,0,0,0.05);
+      background-color: rgba(0, 0, 0, 0.05);
     }
+
+table{
+
+border-collapse: collapse;
+width: 420px;
+}
+
+
+
   </style>
 
 </head>
@@ -70,20 +80,23 @@
   <ul id="main-nav">
     <li><a href="englishintro.html">English</a></li>
     <li><a href="works.html">Artworks <br> 作品</a></li>
-     <li><a href="participantslist.html">Participants <br> 參展者名單</a></li>
+    <li><a href="participantslist.html">Participants <br> 參展者名單</a></li>
   </ul>
   <hr>
 
   <p>「竹簡尋源-香港銀雀山漢簡書法藝術展」是「銀雀山漢簡書法藝術同學會」的首次展覽，展出書法作品包括同學會老師同學的精心傑作, 更有來自十多位香港書法界名家的卓越作品，惠風和暢，熠熠生輝！
   </p>
   <h2>展覽內容</h2>
-  <p>展品書體一半為漢簡，其餘還有草書、行書、隸書和榜書等; 作品書寫的內容涵蓋唐詩宋詞、元曲樂府以及聖經金句，亦有以《孫子兵法》、《孫臏兵法》、《五議》等「銀雀山漢簡」核心典籍為題的創作。參觀是次展覽既可暢覽文化經典、又可欣賞漢簡書寫技法、探研文字變化軌跡，確是一次文化及書法藝術的豐盛體驗!
+  <p>展品書體一半為漢簡，其餘還有草書、行書、隸書和榜書等;
+    作品書寫的內容涵蓋唐詩宋詞、元曲樂府以及聖經金句，亦有以《孫子兵法》、《孫臏兵法》、《五議》等「銀雀山漢簡」核心典籍為題的創作。參觀是次展覽既可暢覽文化經典、又可欣賞漢簡書寫技法、探研文字變化軌跡，確是一次文化及書法藝術的豐盛體驗!
   </p>
 
   <div><img src="photo01a.JPG" alt=""><br>Calligrapher: Mr.Chan Ting King 陳定璟老師<br>作品:《蘭亭序》
- Artwork: "Orchid Pavilion Preface" </div>
+    Artwork: "Orchid Pavilion Preface" </div>
   <h2>銀雀山漢簡</h2>
-  <p>「銀雀山漢簡」是指1972年在山東銀雀山漢墓出土的數千枚簡牘，其價值極高! 被列為“新中國十大考古發現之一”。 出土簡牘包括中國古代四大兵法《孫子兵法》、《孫臏兵法》、《六韜》和《尉繚子》，以及多部珍貴先秦古籍，為研究先秦漢初的政治、經濟、軍事、文化和書法藝術等提供了重要資料。 特別是失傳1700多年的《孫子兵法》和《孫臏兵法》的同時出土， 解開了歷史上孫子和孫臏是否一人、其兵書是一部還是兩部的千古之謎。</p>
+  <p>「銀雀山漢簡」是指1972年在山東銀雀山漢墓出土的數千枚簡牘，其價值極高! 被列為“新中國十大考古發現之一”。
+    出土簡牘包括中國古代四大兵法《孫子兵法》、《孫臏兵法》、《六韜》和《尉繚子》，以及多部珍貴先秦古籍，為研究先秦漢初的政治、經濟、軍事、文化和書法藝術等提供了重要資料。 特別是失傳1700多年的《孫子兵法》和《孫臏兵法》的同時出土，
+    解開了歷史上孫子和孫臏是否一人、其兵書是一部還是兩部的千古之謎。</p>
 
   <h2>銀雀山漢簡的書法特色</h2>
 
@@ -93,43 +106,132 @@
   <p>本會榮譽創會會長是香港書法家陳定璟老師, 陳老師鑽研銀雀山漢簡書法三十餘載，並於二零一八年開班教學，是香港首個專注漢簡的書法班，至今課程已持續七年，累計學員數百人，漢簡越來越受本地書法愛好者的歡迎!
   </p>
   <h2>銀雀山漢簡書法藝術同學會</h2>
-  <p>「銀雀山漢簡書法藝術同學會」在2024年10月成立，以「傳承中華文化，弘揚漢簡書法藝術」為核心宗旨，凝聚海內外漢簡書法愛好者，開展書法研習、作品交流及多元文化活動。我們期盼是次展覽以墨會友，得以迴響！ 未來可與更多喜愛漢簡藝術的書友共聚揮毫，一起領悟漢簡的妙趣風雅。 </p>
+  <p>「銀雀山漢簡書法藝術同學會」在2024年10月成立，以「傳承中華文化，弘揚漢簡書法藝術」為核心宗旨，凝聚海內外漢簡書法愛好者，開展書法研習、作品交流及多元文化活動。我們期盼是次展覽以墨會友，得以迴響！
+    未來可與更多喜愛漢簡藝術的書友共聚揮毫，一起領悟漢簡的妙趣風雅。展覽資料如下，歡迎各界臨蒞參觀指導！ </p>
 
   <h2>聯絡人</h2>
   <p>會長陳寅添（WhatsApp 60915272）<br> 副會長葉潔華 （WhatsApp 90362195)</p>
 
-  <p>展覽資料如下，歡迎各界臨蒞參觀指導！
+  <p>
   </p>
-  <div><img src="dates.png" alt=""></div>
+ 
+ <h2>展覽資料</h2>
 
+  <table>
+    <tr>
+      <td>展覧地點:</td>
+      <td>香港大會堂高座展覧館</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>展覧日期:</td>
+      <td>2026年1月2日至4日</td>
+      <td>(星期五至星期日)</td>
+    </tr>
+    <tr>
+      <td>開幕禮:</td>
+      <td>2026年1月2日(星期五)</td>
+      <td>下午4時正</td>
+    </tr>
+    <tr>
+      <td>展覧開放時間:</td>
+      <td>2026年1月2日(星期五) </td>
+      <td>下午3時至下午6時</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>2026年1月3日(星期六)</td>
+      <td>上午10時至下午7時</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>2026年1月4日(星期日)</td>
+      <td>上午10時至下午5時</td>
+    </tr>
+    <tr>
+      <td>導賞:</td>
+      <td>2026年1月3日(星期六)</td><td>下午3時</td>
+    </tr>
+    <tr> <td></td><td>2026年1月4日(星期日)</td><td>上午11時</td>
+  </tr>
+
+<tr>
+      <td>揮毫:</td>
+      <td>2026年1月3日(星期六)</td><td>上午11時</td>
+    </tr>
+    <tr> <td></td><td>2026年1月4日(星期日)</td><td>下午3時</td>
+  </tr>
+
+
+  </table>
   
-  
+
+
+
   <h1>Exhibition Information</h1>
 
-  <h2>Venue:</h2> <p>Exhibition Gallery, 7/F, High Block, Hong Kong City Hall</p>
+  <h2>Venue:</h2>
+  <p>Exhibition Gallery, 7/F, High Block, Hong Kong City Hall</p>
   <h2>Dates: </h2>
-    <p>2–4 January 2026 (Friday to Sunday)</p>
-         <h2>Opening Hours:</h2>
-      <p>Friday, 2 January 2026: 3:00 p.m. – 6:00 p.m.
-        <br>Saturday, 3 January 2026: 10:00 a.m. – 7:00 p.m.
-        <br>Sunday, 4 January 2026: 10:00 a.m. – 5:00 p.m.</p>
-      
-
- <h2>Opening Ceremony:</h2> 
-
-  <p> Friday, 2 January 2026, 4:00 p.m.
-  </p>
-<h2>Guided Tours</h2>
-
-  <p>Saturday, 3 January 2026: 3:00 p.m.
-  <br>Sunday, 4 January 2026: 11:00 a.m.</p>
+  <p>2–4 January 2026 (Friday to Sunday)</p>
+  <h2>Opening Hours:</h2>  
+  <table>
+    <tr>
+      <td>Friday</td>
+      <td>2 January 2026</td>
+      <td>3:00 p.m. – 6:00 p.m.</td>
+    </tr>
+    <tr>
+      <td>Saturday</td>
+      <td>3 January 2026</td>
+      <td>10:00 a.m. – 7:00 p.m.</td>
+    </tr>
+    <tr>
+      <td>Sunday</td>
+      <td>4 January 2026</td>
+      <td>10:00 a.m. – 5:00 p.m.</td>
+    </tr>
+  </table>     
+  
+  <h2>Opening Ceremony:</h2>
+<table>
+  <tr>
+    <td>Friday</td>
+    <td>2 January 2026</td>
+    <td>4:00 p.m.</td>
+  </tr>
+</table>
+  
+  <h2>Guided Tours</h2>
+<table>
+  <tr>
+    <td>Saturday</td>
+    <td>3 January 2026</td>
+    <td>3:00 p.m.</td>
+  </tr>
+  <tr>
+    <td>Sunday</td>
+    <td>4 January 2026</td>
+    <td>11:00 a.m.</td>
+    <td></td>
+  </tr>
+</table>
+  
 
   <h2>Calligraphy Demonstrations</h2>
-
-  <p> Saturday, 3 January 2026: 11:00 a.m.
-  <br>Sunday, 4 January 2026: 3:00 p.m.
-</p>
-
+<table>
+  <tr>
+    <td>Saturday</td>
+    <td>3 January 2026</td>
+    <td>11:00 a.m.</td>
+  </tr>
+  <tr>
+    <td>Sunday</td>
+    <td>4 January 2026</td>
+    <td>3:00 p.m.</td>
+  </tr>
+</table>
+  
 
 </body>
 
