--- a/englishintro.html
+++ b/englishintro.html
@@ -22,59 +22,98 @@
       color: #b98522;
     }
 
-}
+
     h2 {
-      color: hsl(39, 64%, 29%);
-    }
+      color: hsl(39, 64%, 29%);    }
   </style>
 <body>
      <h1>Bamboo Slips Calligraphy - Tracing the Origins of Chinese Calligraphy
     <br>Hong Kong Yinqueshan Han Bamboo Slips Calligraphy Exhibition
   </h1>
   <hr>
-  <h2>Exhibition Overview</h2>
+  <h2>Introduction</h2>
 
-
-
-The calligraphy of Han bamboo-slip represents a transitional stage between seal script and clerical script in the development of Chinese calligraphy.  It reflects the evolution of Chinese characters from pictorial forms to abstraction and lays the foundation for the development of later script styles such as cursive, running, and regular scripts.
+<p>This exhibition marks the inaugural presentation of the Yinqueshan Han Bamboo Slips Calligraphy Art Alumni Association,  featuring a selection of calligraphic works created by both the instructor and students of the Association, complemented by outstanding contributions from over a dozen eminent calligraphers active in Hong Kong’s contemporary calligraphic circles.</p>
 
 <p>With approximately half of the exhibited works written in the Han bamboo slip style, visitors can appreciate the ancient yet lively beauty of Han-dynasty bamboo-slip calligraphy.  The exhibition also presents calligraphy works in a variety of scripts,  including cursive, running, clerical , regular and large-character scripts.</p> 
 
 <p>The content of the works encompasses masterpieces of Chinese literature such as Tang poetry, Song lyrics , and Yuan literary songs, as well as passages from the Bible. Several original creations also draw inspiration from the core texts of the Yinqueshan Han Bamboo Slips, notably The Art of War, The Art of War by Sun Bin, and Five Discourses.</p> 
+<h2>The Yinqueshan Han Bamboo Slips</h2>
 
 <p>The Yinqueshan Han Bamboo Slips  refers to thousands of bamboo manuscripts discovered in 1972 from Han tombs excavated at Yinqueshan, Shandong Province—an archaeological discovery recognized as one of the “Ten Greatest Archaeological Finds of New China.” The corpus includes China’s four great military classics—The Art of War, The Art of War by Sun Bin, The Six Strategies, and The Wei Liaozi —as well as numerous rare pre-Qin texts. </p>
-
+<h2>The Significance of Han bamboo-slip Calligraphy </h2>
+<p>The calligraphy of Han bamboo-slip represents a transitional stage between seal script and clerical script in the development of Chinese calligraphy.  It reflects the evolution of Chinese characters from pictorial forms to abstraction and lays the foundation for the development of later script styles such as cursive, running, and regular scripts.</p>
+<h2>The Calligraphic Value of Yinqueshan Bamboo Slips</h2>
 <p>The calligraphic value of the Yinqueshan bamboo slips lies in their role as paradigms of early clerical script  from the Qin–Han transition. Their diverse writing styles, characterized by fluidity and structural balance, vividly illustrate the transformation of Chinese writing from archaic forms toward the more formalized clerical script. The brushwork exudes an uncontrived harmony—rounded, spontaneous, and graceful—with strokes that are both disciplined and full of rhythmic vitality.</p>
 
-<p>This exhibition marks the inaugural presentation of the Yinqueshan Han Bamboo Slips Calligraphy Art Alumni Association,  featuring a selection of calligraphic works created by both the instructor and students of the Association, complemented by outstanding contributions from over a dozen eminent calligraphers active in Hong Kong’s contemporary calligraphic circles.</p>
+
 
 <p>We sincerely invite you to experience a profound encounter with both the cultural classics of China and the aesthetic techniques of Han bamboo slip calligraphy!</p>
 <h2>Exhibition Information</h2>
 
 
-  <h3>Venue:</h3> <p>Exhibition Gallery, 7/F, High Block, Hong Kong City Hall</p>
-   <h3>Dates: </h3>
-    <p>2–4 January 2026 (Friday to Sunday)</p>
-         <h3>Opening Hours:</h3>
-      <p>Friday, 2 January 2026: 3:00 p.m. – 6:00 p.m.
-        <br>Saturday, 3 January 2026: 10:00 a.m. – 7:00 p.m.
-        <br>Sunday, 4 January 2026: 10:00 a.m. – 5:00 p.m.</p>
-      
- <h3>Opening Ceremony:</h3> 
-
-
-  <p> Friday, 2 January 2026, 4:00 p.m.
-  </p>
-<h3>Guided Tours</h3>
-
-  <p>Saturday, 3 January 2026: 3:00 p.m.
-  <br>Sunday, 4 January 2026: 11:00 a.m.</p>
+  <h3>Venue:</h3>
+  <p>Exhibition Gallery, 7/F, High Block, Hong Kong City Hall</p>
+  <h3>Dates: </h3>
+  <p>2–4 January 2026 (Friday to Sunday)</p>
+  <h3>Opening Hours:</h3>  
+  <table>
+    <tr>
+      <td>Friday</td>
+      <td>2 January 2026</td>
+      <td>3:00 p.m. – 6:00 p.m.</td>
+    </tr>
+    <tr>
+      <td>Saturday</td>
+      <td>3 January 2026</td>
+      <td>10:00 a.m. – 7:00 p.m.</td>
+    </tr>
+    <tr>
+      <td>Sunday</td>
+      <td>4 January 2026</td>
+      <td>10:00 a.m. – 5:00 p.m.</td>
+    </tr>
+  </table>     
+  <br>
+  <h3>Opening Ceremony:</h3>
+<table>
+  <tr>
+    <td>Friday</td>
+    <td>2 January 2026</td>
+    <td>4:00 p.m.</td>
+  </tr>
+</table>
+  
+  <h3>Guided Tours</h3>
+<table>
+  <tr>
+    <td>Saturday</td>
+    <td>3 January 2026</td>
+    <td>3:00 p.m.</td>
+  </tr>
+  <tr>
+    <td>Sunday</td>
+    <td>4 January 2026</td>
+    <td>11:00 a.m.</td>
+    <td></td>
+  </tr>
+</table>
+  <br>
 
   <h3>Calligraphy Demonstrations</h3>
+<table>
+  <tr>
+    <td>Saturday</td>
+    <td>3 January 2026</td>
+    <td>11:00 a.m.</td>
+  </tr>
+  <tr>
+    <td>Sunday</td>
+    <td>4 January 2026</td>
+    <td>3:00 p.m.</td>
+  </tr>
+</table>
 
-  <p> Saturday, 3 January 2026: 11:00 a.m.
-  <br>Sunday, 4 January 2026: 3:00 p.m.
-</p>
  <div><a href="index.html">Back to Home</a></div>
 </body>
 </html>
