--- a/works.html
+++ b/works.html
@@ -33,8 +33,7 @@
  Artwork: "The Art of War" 作品:《孫子兵法》 </div>
   </p>
     <div></div>
-     <img src="YKW.JPG" alt=""><p>Calligrapher: Ms. Yip Kit Wah 葉潔華
-  - Vice Chairman - 副會長<br>
- Artwork: "Five Discourses" 作品:《五議》</p>
+     <img src="YKW.JPG" alt=""><p>Calligrapher: Ms. Sotania Yip  葉潔華 
+  -Vice Chairman 副會長<br> Artwork: "Five Discourses" 作品:《五議》</p>
 </body>
 </html><div><a href="index.html">Back to Home</a></div>
