--- a/englishintro.html
+++ b/englishintro.html
@@ -41,9 +41,9 @@
 <h2>The Yinqueshan Han Bamboo Slips</h2>
 
 <p>The Yinqueshan Han Bamboo Slips  refers to thousands of bamboo manuscripts discovered in 1972 from Han tombs excavated at Yinqueshan, Shandong Province—an archaeological discovery recognized as one of the “Ten Greatest Archaeological Finds of New China.” The corpus includes China’s four great military classics—The Art of War, The Art of War by Sun Bin, The Six Strategies, and The Wei Liaozi —as well as numerous rare pre-Qin texts. </p>
-<h2>The Significance of Han bamboo-slip Calligraphy </h2>
+<h2>Significance of Han bamboo-slip  </h2>
 <p>The calligraphy of Han bamboo-slip represents a transitional stage between seal script and clerical script in the development of Chinese calligraphy.  It reflects the evolution of Chinese characters from pictorial forms to abstraction and lays the foundation for the development of later script styles such as cursive, running, and regular scripts.</p>
-<h2>The Calligraphic Value of Yinqueshan Bamboo Slips</h2>
+<h2>Calligraphic Value </h2>
 <p>The calligraphic value of the Yinqueshan bamboo slips lies in their role as paradigms of early clerical script  from the Qin–Han transition. Their diverse writing styles, characterized by fluidity and structural balance, vividly illustrate the transformation of Chinese writing from archaic forms toward the more formalized clerical script. The brushwork exudes an uncontrived harmony—rounded, spontaneous, and graceful—with strokes that are both disciplined and full of rhythmic vitality.</p>
 
 
