--- a/englishintro.html
+++ b/englishintro.html
@@ -84,7 +84,7 @@
   </tr>
 </table>
   
-  <h3>Guided Tours</h3>
+  <h3>Guided Tour</h3>
 <table>
   <tr>
     <td>Saturday</td>
@@ -100,7 +100,7 @@
 </table>
   <br>
 
-  <h3>Calligraphy Demonstrations</h3>
+  <h3>Calligraphy Demonstration</h3>
 <table>
   <tr>
     <td>Saturday</td>
