--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ width: 420px;
   </tr>
 </table>
   
-  <h2>Guided Tours</h2>
+  <h2>Guided Tour</h2>
 <table>
   <tr>
     <td>Saturday</td>
@@ -218,7 +218,7 @@ width: 420px;
 </table>
   
 
-  <h2>Calligraphy Demonstrations</h2>
+  <h2>Calligraphy Demonstration</h2>
 <table>
   <tr>
     <td>Saturday</td>
