--- a/participantslist.html
+++ b/participantslist.html
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-    <h1>參展者名單<br> Participants List</h1>
+    <h1>參展者名單<br> Participant List</h1>
     <H2>參展嘉賓</H2>
     <p>(排名不分先後)<br>馮萬如先生<br>  		梁君度先生<br> 		吳任先生<br> 		陳用先生<br> 	梁啟明先生<br> 		馬潤憲先生<br> 
 葉炯光先生<br> 		李堃銘先生<br> 		麥錦超先生<br> 		徐貴三先生<br> 		陳志恆先生<br> 		馮鶴亭先生<br> 
